5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4424/executions/1674_1105.log
== TEST (2019-04-26 15:09:45) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("entrada", brasao)

if(brasao=="lobo"):
	casa="casa:Stark"
elif(brasao=="leao"):
	casa="casa:Lannister"
elif(brasao=="veado"):
	casa="casa:Baratheon"
elif(brasao=="dragao"):
	casa="casa:Targaryen"
elif(brasao=="rosa"):
	casa="casa:Tyrell"
elif(brasao=="sol"):
	casa="casa:Martell"
elif(brasao=="lula"):
	casa="casa:Greyjoy"
elif(brasao=="Esfolado"):
	casa="casa:Bolton"
elif(brasao=="turta"):
	casa="casa:Tully"
else("brasao invalido")
-- ERROR:
File "XXXX", line 24
    else("brasao invalido")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:30:37) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("entrada", brasao)

if(brasao=="lobo"):
	casa="casa:Stark"
elif(brasao=="leao"):
	casa="casa:Lannister"
elif(brasao=="veado"):
	casa="casa:Baratheon"
elif(brasao=="dragao"):
	casa="casa:Targaryen"
elif(brasao=="rosa"):
	casa="casa:Tyrell"
elif(brasao=="sol"):
	casa="casa:Martell"
elif(brasao=="lula"):
	casa="casa:Greyjoy"
elif(brasao=="Esfolado"):
	casa="casa:Bolton"
elif(brasao=="turta"):
	casa="casa:Tully"
else("brasao invalido")

print("Entrada: ", brasao)
print("casa: ", casa)
-- ERROR:
File "XXXX", line 24
    else("brasao invalido")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:30:48) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("entrada", brasao)

if(brasao=="lobo"):
	casa="casa:Stark"
elif(brasao=="leao"):
	casa="casa:Lannister"
elif(brasao=="veado"):
	casa="casa:Baratheon"
elif(brasao=="dragao"):
	casa="casa:Targaryen"
elif(brasao=="rosa"):
	casa="casa:Tyrell"
elif(brasao=="sol"):
	casa="casa:Martell"
elif(brasao=="lula"):
	casa="casa:Greyjoy"
elif(brasao=="Esfolado"):
	casa="casa:Bolton"
elif(brasao=="turta"):
	casa="casa:Tully"
else("brasao invalido")

print("Entrada: ", brasao)
print("casa: ", casa)
-- ERROR:
File "XXXX", line 24
    else("brasao invalido")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:33:51) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("entrada", brasao)

if(brasao=="lobo"):
	casa="casa:Stark"
elif(brasao=="leao"):
	casa="casa:Lannister"
elif(brasao=="veado"):
	casa="casa:Baratheon"
elif(brasao=="dragao"):
	casa="casa:Targaryen"
elif(brasao=="rosa"):
	casa="casa:Tyrell"
elif(brasao=="sol"):
	casa="casa:Martell"
elif(brasao=="lula"):
	casa="casa:Greyjoy"
elif(brasao=="Esfolado"):
	casa="casa:Bolton"
elif(brasao=="turta"):
	casa="casa:Tully"
else("brasao invalido"):

print("Entrada: ", brasao)
print("casa: ", casa)
-- ERROR:
File "XXXX", line 24
    else("brasao invalido"):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:34:39) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("entrada", brasao)

if(brasao=="lobo"):
	casa="casa:Stark"
elif(brasao=="leao"):
	casa="casa:Lannister"
elif(brasao=="veado"):
	casa="casa:Baratheon"
elif(brasao=="dragao"):
	casa="casa:Targaryen"
elif(brasao=="rosa"):
	casa="casa:Tyrell"
elif(brasao=="sol"):
	casa="casa:Martell"
elif(brasao=="lula"):
	casa="casa:Greyjoy"
elif(brasao=="Esfolado"):
	casa="casa:Bolton"
elif(brasao=="turta"):
	casa="casa:Tully"
else:
	("brasao invalido")

print("Entrada: ", brasao)
print("casa: ", casa)
-- OUTPUT:
entrada lula
Entrada:  lula
casa:  casa:Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:34:57) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("entrada", brasao)

if(brasao=="lobo"):
	casa="casa:Stark"
elif(brasao=="leao"):
	casa="casa:Lannister"
elif(brasao=="veado"):
	casa="casa:Baratheon"
elif(brasao=="dragao"):
	casa="casa:Targaryen"
elif(brasao=="rosa"):
	casa="casa:Tyrell"
elif(brasao=="sol"):
	casa="casa:Martell"
elif(brasao=="lula"):
	casa="casa:Greyjoy"
elif(brasao=="Esfolado"):
	casa="casa:Bolton"
elif(brasao=="turta"):
	casa="casa:Tully"
else:
	("brasao invalido")

print("Entrada: ", brasao)
print("casa: ", )
-- OUTPUT:
entrada lula
Entrada:  lula
casa:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:35:19) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("entrada", brasao)

if(brasao=="lobo"):
	casa="casa:Stark"
elif(brasao=="leao"):
	casa="casa:Lannister"
elif(brasao=="veado"):
	casa="casa:Baratheon"
elif(brasao=="dragao"):
	casa="casa:Targaryen"
elif(brasao=="rosa"):
	casa="casa:Tyrell"
elif(brasao=="sol"):
	casa="casa:Martell"
elif(brasao=="lula"):
	casa="casa:Greyjoy"
elif(brasao=="Esfolado"):
	casa="casa:Bolton"
elif(brasao=="turta"):
	casa="casa:Tully"
else:
	("brasao invalido")

print("Entrada: ", brasao)
print(casa)
-- OUTPUT:
entrada lula
Entrada:  lula
casa:Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 12:35:28) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("entrada", brasao)

if(brasao=="lobo"):
	casa="casa:Stark"
elif(brasao=="leao"):
	casa="casa:Lannister"
elif(brasao=="veado"):
	casa="casa:Baratheon"
elif(brasao=="dragao"):
	casa="casa:Targaryen"
elif(brasao=="rosa"):
	casa="casa:Tyrell"
elif(brasao=="sol"):
	casa="casa:Martell"
elif(brasao=="lula"):
	casa="casa:Greyjoy"
elif(brasao=="Esfolado"):
	casa="casa:Bolton"
elif(brasao=="turta"):
	casa="casa:Tully"
else:
	("brasao invalido")

print("Entrada: ", brasao)
print(casa)
-- EXECUTION TIME:
0.123096
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
entrada lula
Entrada:  lula
casa:Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
entrada tambaqui
Entrada:  tambaqui
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
entrada dragao
Entrada:  dragao
casa:Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:35:50) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("entrada", brasao)

if(brasao=="lobo"):
	casa="casa: Stark"
elif(brasao=="leao"):
	casa="casa: Lannister"
elif(brasao=="veado"):
	casa="casa: Baratheon"
elif(brasao=="dragao"):
	casa="casa: Targaryen"
elif(brasao=="rosa"):
	casa="casa: Tyrell"
elif(brasao=="sol"):
	casa="casa: Martell"
elif(brasao=="lula"):
	casa="casa: Greyjoy"
elif(brasao=="Esfolado"):
	casa="casa: Bolton"
elif(brasao=="turta"):
	casa="casa: Tully"
else:
	("brasao invalido")

print("Entrada: ", brasao)
print(casa)
-- OUTPUT:
entrada lula
Entrada:  lula
casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 12:35:57) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("entrada", brasao)

if(brasao=="lobo"):
	casa="casa: Stark"
elif(brasao=="leao"):
	casa="casa: Lannister"
elif(brasao=="veado"):
	casa="casa: Baratheon"
elif(brasao=="dragao"):
	casa="casa: Targaryen"
elif(brasao=="rosa"):
	casa="casa: Tyrell"
elif(brasao=="sol"):
	casa="casa: Martell"
elif(brasao=="lula"):
	casa="casa: Greyjoy"
elif(brasao=="Esfolado"):
	casa="casa: Bolton"
elif(brasao=="turta"):
	casa="casa: Tully"
else:
	("brasao invalido")

print("Entrada: ", brasao)
print(casa)
-- EXECUTION TIME:
0.118363
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
entrada lula
Entrada:  lula
casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
entrada tambaqui
Entrada:  tambaqui
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
entrada dragao
Entrada:  dragao
casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:36:06) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("entrada", brasao)

if(brasao=="lobo"):
	casa="casa: Stark"
elif(brasao=="leao"):
	casa="casa: Lannister"
elif(brasao=="veado"):
	casa="casa: Baratheon"
elif(brasao=="dragao"):
	casa="casa: Targaryen"
elif(brasao=="rosa"):
	casa="casa: Tyrell"
elif(brasao=="sol"):
	casa="casa: Martell"
elif(brasao=="lula"):
	casa="casa: Greyjoy"
elif(brasao=="Esfolado"):
	casa="casa: Bolton"
elif(brasao=="turta"):
	casa="casa: Tully"
else:
	("brasao invalido")

print("Entrada: ", brasao)
print(casa)
-- OUTPUT:
entrada lula
Entrada:  lula
casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:37:19) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("entrada", brasao)

if(brasao=="lobo"):
	casa="casa: Stark"
elif(brasao=="leao"):
	casa="casa: Lannister"
elif(brasao=="veado"):
	casa="casa: Baratheon"
elif(brasao=="dragao"):
	casa="casa: Targaryen"
elif(brasao=="rosa"):
	casa="casa: Tyrell"
elif(brasao=="sol"):
	casa="casa: Martell"
elif(brasao=="lula"):
	casa="casa: Greyjoy"
elif(brasao=="Esfolado"):
	casa="casa: Bolton"
elif(brasao=="turta"):
	casa="casa: Tully"
else:
	("brasao invalido")

print("Entrada: ", brasao)
print(casa)
-- OUTPUT:
entrada lula
Entrada:  lula
casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:37:26) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("entrada", brasao)

if(brasao=="lobo"):
	casa="casa: Stark"
elif(brasao=="leao"):
	casa="casa: Lannister"
elif(brasao=="veado"):
	casa="casa: Baratheon"
elif(brasao=="dragao"):
	casa="casa: Targaryen"
elif(brasao=="rosa"):
	casa="casa: Tyrell"
elif(brasao=="sol"):
	casa="casa: Martell"
elif(brasao=="lula"):
	casa="casa: Greyjoy"
elif(brasao=="Esfolado"):
	casa="casa: Bolton"
elif(brasao=="turta"):
	casa="casa: Tully"
else:
	("brasao invalido")

print("Entrada: ", brasao)
print(casa)
-- OUTPUT:
entrada lula
Entrada:  lula
casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:37:33) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("entrada", brasao)

if(brasao=="lobo"):
	casa="casa: Stark"
elif(brasao=="leao"):
	casa="casa: Lannister"
elif(brasao=="veado"):
	casa="casa: Baratheon"
elif(brasao=="dragao"):
	casa="casa: Targaryen"
elif(brasao=="rosa"):
	casa="casa: Tyrell"
elif(brasao=="sol"):
	casa="casa: Martell"
elif(brasao=="lula"):
	casa="casa: Greyjoy"
elif(brasao=="Esfolado"):
	casa="casa: Bolton"
elif(brasao=="turta"):
	casa="casa: Tully"
else:
	("brasao invalido")

print("Entrada: ", brasao)
print(casa)
-- OUTPUT:
entrada lula
Entrada:  lula
casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:37:50) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("entrada", brasao)

if(brasao=="lobo"):
	casa="casa: Stark"
elif(brasao=="leao"):
	casa="casa: Lannister"
elif(brasao=="veado"):
	casa="casa: Baratheon"
elif(brasao=="dragao"):
	casa="casa: Targaryen"
elif(brasao=="rosa"):
	casa="casa: Tyrell"
elif(brasao=="sol"):
	casa="casa: Martell"
elif(brasao=="lula"):
	casa="casa: Greyjoy"
elif(brasao=="Esfolado"):
	casa="casa: Bolton"
elif(brasao=="turta"):
	casa="casa: Tully"
else:
	("brasao invalido")

print("Entrada:", brasao)
print(casa)
-- OUTPUT:
entrada lula
Entrada: lula
casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 12:37:55) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("entrada", brasao)

if(brasao=="lobo"):
	casa="casa: Stark"
elif(brasao=="leao"):
	casa="casa: Lannister"
elif(brasao=="veado"):
	casa="casa: Baratheon"
elif(brasao=="dragao"):
	casa="casa: Targaryen"
elif(brasao=="rosa"):
	casa="casa: Tyrell"
elif(brasao=="sol"):
	casa="casa: Martell"
elif(brasao=="lula"):
	casa="casa: Greyjoy"
elif(brasao=="Esfolado"):
	casa="casa: Bolton"
elif(brasao=="turta"):
	casa="casa: Tully"
else:
	("brasao invalido")

print("Entrada:", brasao)
print(casa)
-- EXECUTION TIME:
0.150238
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
entrada lula
Entrada: lula
casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
entrada tambaqui
Entrada: tambaqui
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
entrada dragao
Entrada: dragao
casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:37:55) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("entrada", brasao)

if(brasao=="lobo"):
	casa="casa: Stark"
elif(brasao=="leao"):
	casa="casa: Lannister"
elif(brasao=="veado"):
	casa="casa: Baratheon"
elif(brasao=="dragao"):
	casa="casa: Targaryen"
elif(brasao=="rosa"):
	casa="casa: Tyrell"
elif(brasao=="sol"):
	casa="casa: Martell"
elif(brasao=="lula"):
	casa="casa: Greyjoy"
elif(brasao=="Esfolado"):
	casa="casa: Bolton"
elif(brasao=="turta"):
	casa="casa: Tully"
else:
	("brasao invalido")

print("Entrada:", brasao)
print(casa)
-- OUTPUT:
entrada lula
Entrada: lula
casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 12:37:56) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("entrada", brasao)

if(brasao=="lobo"):
	casa="casa: Stark"
elif(brasao=="leao"):
	casa="casa: Lannister"
elif(brasao=="veado"):
	casa="casa: Baratheon"
elif(brasao=="dragao"):
	casa="casa: Targaryen"
elif(brasao=="rosa"):
	casa="casa: Tyrell"
elif(brasao=="sol"):
	casa="casa: Martell"
elif(brasao=="lula"):
	casa="casa: Greyjoy"
elif(brasao=="Esfolado"):
	casa="casa: Bolton"
elif(brasao=="turta"):
	casa="casa: Tully"
else:
	("brasao invalido")

print("Entrada:", brasao)
print(casa)
-- EXECUTION TIME:
0.169494
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
entrada lula
Entrada: lula
casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
entrada tambaqui
Entrada: tambaqui
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
entrada dragao
Entrada: dragao
casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 12:38:37) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("entrada", brasao)

if(brasao=="lobo"):
	casa="casa: Stark"
elif(brasao=="leao"):
	casa="casa: Lannister"
elif(brasao=="veado"):
	casa="casa: Baratheon"
elif(brasao=="dragao"):
	casa="casa: Targaryen"
elif(brasao=="rosa"):
	casa="casa: Tyrell"
elif(brasao=="sol"):
	casa="casa: Martell"
elif(brasao=="lula"):
	casa="casa: Greyjoy"
elif(brasao=="Esfolado"):
	casa="casa: Bolton"
elif(brasao=="turta"):
	casa="casa: Tully"
else:
	("brasao invalido")

print(casa)
-- EXECUTION TIME:
0.196441
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
entrada lula
casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
entrada tambaqui
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
entrada dragao
casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:38:38) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("entrada", brasao)

if(brasao=="lobo"):
	casa="casa: Stark"
elif(brasao=="leao"):
	casa="casa: Lannister"
elif(brasao=="veado"):
	casa="casa: Baratheon"
elif(brasao=="dragao"):
	casa="casa: Targaryen"
elif(brasao=="rosa"):
	casa="casa: Tyrell"
elif(brasao=="sol"):
	casa="casa: Martell"
elif(brasao=="lula"):
	casa="casa: Greyjoy"
elif(brasao=="Esfolado"):
	casa="casa: Bolton"
elif(brasao=="turta"):
	casa="casa: Tully"
else:
	("brasao invalido")

print(casa)
-- OUTPUT:
entrada lula
casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:40:31) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("Entrada: ", brasao)

if(brasao=="lobo"):
	casa="casa: Stark"
elif(brasao=="leao"):
	casa="casa: Lannister"
elif(brasao=="veado"):
	casa="casa: Baratheon"
elif(brasao=="dragao"):
	casa="casa: Targaryen"
elif(brasao=="rosa"):
	casa="casa: Tyrell"
elif(brasao=="sol"):
	casa="casa: Martell"
elif(brasao=="lula"):
	casa="casa: Greyjoy"
elif(brasao=="Esfolado"):
	casa="casa: Bolton"
elif(brasao=="turta"):
	casa="casa: Tully"
else:
	("brasao invalido")

print(casa)
-- OUTPUT:
Entrada:  lula
casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 12:40:38) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("Entrada: ", brasao)

if(brasao=="lobo"):
	casa="casa: Stark"
elif(brasao=="leao"):
	casa="casa: Lannister"
elif(brasao=="veado"):
	casa="casa: Baratheon"
elif(brasao=="dragao"):
	casa="casa: Targaryen"
elif(brasao=="rosa"):
	casa="casa: Tyrell"
elif(brasao=="sol"):
	casa="casa: Martell"
elif(brasao=="lula"):
	casa="casa: Greyjoy"
elif(brasao=="Esfolado"):
	casa="casa: Bolton"
elif(brasao=="turta"):
	casa="casa: Tully"
else:
	("brasao invalido")

print(casa)
-- EXECUTION TIME:
0.152127
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:43:32) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("Entrada: ", brasao)

if(brasao=="lobo"):
	casa="Casa: Stark"
	elif(brasao=="leao"):
	casa="Casa: Lannister"
elif(brasao=="veado"):
	casa="Casa: Baratheon"
elif(brasao=="dragao"):
	casa="Casa: Targaryen"
elif(brasao=="rosa"):
	casa="Casa: Tyrell"
elif(brasao=="sol"):
	casa="Casa: Martell"
elif(brasao=="lula"):
	casa="Casa: Greyjoy"
elif(brasao=="Esfolado"):
	casa="Casa: Bolton"
elif(brasao=="turta"):
	casa="Casa: Tully"
else:
	("Brasao invalido")

print(Casa)
-- ERROR:
File "XXXX", line 8
    elif(brasao=="leao"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:43:41) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("Entrada: ", brasao)

if(brasao=="lobo"):
	casa="Casa: Stark"
	elif(brasao=="leao"):
	casa="Casa: Lannister"
elif(brasao=="veado"):
	casa="Casa: Baratheon"
elif(brasao=="dragao"):
	casa="Casa: Targaryen"
elif(brasao=="rosa"):
	casa="Casa: Tyrell"
elif(brasao=="sol"):
	casa="Casa: Martell"
elif(brasao=="lula"):
	casa="Casa: Greyjoy"
elif(brasao=="Esfolado"):
	casa="Casa: Bolton"
elif(brasao=="turta"):
	casa="Casa: Tully"
else:
	("Brasao invalido")

print(Casa)
-- ERROR:
File "XXXX", line 8
    elif(brasao=="leao"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:43:48) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("Entrada: ", brasao)

if(brasao=="lobo"):
	casa="Casa: Stark"
elif(brasao=="leao"):
	casa="Casa: Lannister"
elif(brasao=="veado"):
	casa="Casa: Baratheon"
elif(brasao=="dragao"):
	casa="Casa: Targaryen"
elif(brasao=="rosa"):
	casa="Casa: Tyrell"
elif(brasao=="sol"):
	casa="Casa: Martell"
elif(brasao=="lula"):
	casa="Casa: Greyjoy"
elif(brasao=="Esfolado"):
	casa="Casa: Bolton"
elif(brasao=="turta"):
	casa="Casa: Tully"
else:
	("Brasao invalido")

print(Casa)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 27, in <module>
    print(Casa)
NameError: name 'Casa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:44:15) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("Entrada: ", brasao)

if(brasao=="lobo"):
	casa="Casa: Stark"
elif(brasao=="leao"):
	casa="Casa: Lannister"
elif(brasao=="veado"):
	casa="Casa: Baratheon"
elif(brasao=="dragao"):
	casa="Casa: Targaryen"
elif(brasao=="rosa"):
	casa="Casa: Tyrell"
elif(brasao=="sol"):
	casa="Casa: Martell"
elif(brasao=="lula"):
	casa="Casa: Greyjoy"
elif(brasao=="Esfolado"):
	casa="Casa: Bolton"
elif(brasao=="turta"):
	casa="Casa: Tully"
else:
	("Brasao invalido")

print(casa)
-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 12:44:20) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("Entrada: ", brasao)

if(brasao=="lobo"):
	casa="Casa: Stark"
elif(brasao=="leao"):
	casa="Casa: Lannister"
elif(brasao=="veado"):
	casa="Casa: Baratheon"
elif(brasao=="dragao"):
	casa="Casa: Targaryen"
elif(brasao=="rosa"):
	casa="Casa: Tyrell"
elif(brasao=="sol"):
	casa="Casa: Martell"
elif(brasao=="lula"):
	casa="Casa: Greyjoy"
elif(brasao=="Esfolado"):
	casa="Casa: Bolton"
elif(brasao=="turta"):
	casa="Casa: Tully"
else:
	("Brasao invalido")

print(casa)
-- EXECUTION TIME:
0.13066
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:46:01) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("Entrada: ", brasao)

if(brasao=="lobo"):
	casa="Casa: Stark"
elif(brasao=="leao"):
	casa="Casa: Lannister"
elif(brasao=="veado"):
	casa="Casa: Baratheon"
elif(brasao=="dragao"):
	casa="Casa: Targaryen"
elif(brasao=="rosa"):
	casa="Casa: Tyrell"
elif(brasao=="sol"):
	casa="Casa: Martell"
elif(brasao=="lula"):
	casa="Casa: Greyjoy"
elif(brasao=="Esfolado"):
	casa="Casa: Bolton"
elif(brasao=="turta"):
	casa="Casa: Tully"
else:
	print("Entrada: ")
	print("Brasao invalido")

print(casa)
-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:46:22) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("Entrada: ", brasao)

if(brasao=="lobo"):
	casa="Casa: Stark"
elif(brasao=="leao"):
	casa="Casa: Lannister"
elif(brasao=="veado"):
	casa="Casa: Baratheon"
elif(brasao=="dragao"):
	casa="Casa: Targaryen"
elif(brasao=="rosa"):
	casa="Casa: Tyrell"
elif(brasao=="sol"):
	casa="Casa: Martell"
elif(brasao=="lula"):
	casa="Casa: Greyjoy"
elif(brasao=="Esfolado"):
	casa="Casa: Bolton"
elif(brasao=="turta"):
	casa="Casa: Tully"
else:
	print("Entrada: ")
	print("Brasao invalido")

print(casa)
-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:46:28) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("Entrada: ", brasao)

if(brasao=="lobo"):
	casa="Casa: Stark"
elif(brasao=="leao"):
	casa="Casa: Lannister"
elif(brasao=="veado"):
	casa="Casa: Baratheon"
elif(brasao=="dragao"):
	casa="Casa: Targaryen"
elif(brasao=="rosa"):
	casa="Casa: Tyrell"
elif(brasao=="sol"):
	casa="Casa: Martell"
elif(brasao=="lula"):
	casa="Casa: Greyjoy"
elif(brasao=="Esfolado"):
	casa="Casa: Bolton"
elif(brasao=="turta"):
	casa="Casa: Tully"
else:
	print("Entrada: ")
	print("Brasao invalido")

print(casa)
-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:46:44) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("Entrada: ", brasao)

if(brasao=="lobo"):
	casa="Casa: Stark"
elif(brasao=="leao"):
	casa="Casa: Lannister"
elif(brasao=="veado"):
	casa="Casa: Baratheon"
elif(brasao=="dragao"):
	casa="Casa: Targaryen"
elif(brasao=="rosa"):
	casa="Casa: Tyrell"
elif(brasao=="sol"):
	casa="Casa: Martell"
elif(brasao=="lula"):
	casa="Casa: Greyjoy"
elif(brasao=="Esfolado"):
	casa="Casa: Bolton"
elif(brasao=="turta"):
	casa="Casa: Tully"
else:
	print("Entrada: ")
	print("Brasao invalido")

print(casa)
-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:47:47) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("Entrada: ", brasao)

if(brasao=="lobo"):
	casa="Casa: Stark"
elif(brasao=="leao"):
	casa="Casa: Lannister"
elif(brasao=="veado"):
	casa="Casa: Baratheon"
elif(brasao=="dragao"):
	casa="Casa: Targaryen"
elif(brasao=="rosa"):
	casa="Casa: Tyrell"
elif(brasao=="sol"):
	casa="Casa: Martell"
elif(brasao=="lula"):
	casa="Casa: Greyjoy"
elif(brasao=="Esfolado"):
	casa="Casa: Bolton"
elif(brasao=="turta"):
	casa="Casa: Tully"
else:
	print("Entrada: ", brasao)
	print("Brasao invalido")

print(casa)
-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:48:22) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()

if(brasao=="lobo"):
	casa="Casa: Stark"
elif(brasao=="leao"):
	casa="Casa: Lannister"
elif(brasao=="veado"):
	casa="Casa: Baratheon"
elif(brasao=="dragao"):
	casa="Casa: Targaryen"
elif(brasao=="rosa"):
	casa="Casa: Tyrell"
elif(brasao=="sol"):
	casa="Casa: Martell"
elif(brasao=="lula"):
	casa="Casa: Greyjoy"
elif(brasao=="Esfolado"):
	casa="Casa: Bolton"
elif(brasao=="turta"):
	casa="Casa: Tully"
else:
	print("Entrada: ", brasao)
	print("Brasao invalido")
	
print("Entrada: ", brasao)
print(casa)
-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:50:58) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("Entrada: ", brasao)

if(brasao=="lobo"):
	casa="Casa: Stark"
elif(brasao=="leao"):
	casa="Casa: Lannister"
elif(brasao=="veado"):
	casa="Casa: Baratheon"
elif(brasao=="dragao"):
	casa="Casa: Targaryen"
elif(brasao=="rosa"):
	casa="Casa: Tyrell"
elif(brasao=="sol"):
	casa="Casa: Martell"
elif(brasao=="lula"):
	casa="Casa: Greyjoy"
elif(brasao=="Esfolado"):
	casa="Casa: Bolton"
elif(brasao=="turta"):
	casa="Casa: Tully"
else:
	print("Entrada: ", brasao)
	print("Brasao invalido")


-- OUTPUT:
Entrada:  lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:51:17) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("Entrada: ", brasao)

if(brasao=="lobo"):
	casa="Casa: Stark"
elif(brasao=="leao"):
	casa="Casa: Lannister"
elif(brasao=="veado"):
	casa="Casa: Baratheon"
elif(brasao=="dragao"):
	casa="Casa: Targaryen"
elif(brasao=="rosa"):
	casa="Casa: Tyrell"
elif(brasao=="sol"):
	casa="Casa: Martell"
elif(brasao=="lula"):
	casa="Casa: Greyjoy"
elif(brasao=="Esfolado"):
	casa="Casa: Bolton"
elif(brasao=="turta"):
	casa="Casa: Tully"
else:
	print("Entrada: ", brasao)
	print("Brasao invalido")

print(casa)

-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 12:51:17) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("Entrada: ", brasao)

if(brasao=="lobo"):
	casa="Casa: Stark"
elif(brasao=="leao"):
	casa="Casa: Lannister"
elif(brasao=="veado"):
	casa="Casa: Baratheon"
elif(brasao=="dragao"):
	casa="Casa: Targaryen"
elif(brasao=="rosa"):
	casa="Casa: Tyrell"
elif(brasao=="sol"):
	casa="Casa: Martell"
elif(brasao=="lula"):
	casa="Casa: Greyjoy"
elif(brasao=="Esfolado"):
	casa="Casa: Bolton"
elif(brasao=="turta"):
	casa="Casa: Tully"
else:
	print("Entrada: ", brasao)
	print("Brasao invalido")

print(casa)

-- EXECUTION TIME:
0.143502
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Entrada:  tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:51:18) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("Entrada: ", brasao)

if(brasao=="lobo"):
	casa="Casa: Stark"
elif(brasao=="leao"):
	casa="Casa: Lannister"
elif(brasao=="veado"):
	casa="Casa: Baratheon"
elif(brasao=="dragao"):
	casa="Casa: Targaryen"
elif(brasao=="rosa"):
	casa="Casa: Tyrell"
elif(brasao=="sol"):
	casa="Casa: Martell"
elif(brasao=="lula"):
	casa="Casa: Greyjoy"
elif(brasao=="Esfolado"):
	casa="Casa: Bolton"
elif(brasao=="turta"):
	casa="Casa: Tully"
else:
	print("Entrada: ", brasao)
	print("Brasao invalido")

print(casa)

-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:52:20) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("Entrada: ", brasao)

if(brasao=="lobo"):
	casa="Casa: Stark"
elif(brasao=="leao"):
	casa="Casa: Lannister"
elif(brasao=="veado"):
	casa="Casa: Baratheon"
elif(brasao=="dragao"):
	casa="Casa: Targaryen"
elif(brasao=="rosa"):
	casa="Casa: Tyrell"
elif(brasao=="sol"):
	casa="Casa: Martell"
elif(brasao=="lula"):
	casa="Casa: Greyjoy"
elif(brasao=="Esfolado"):
	casa="Casa: Bolton"
elif(brasao=="turta"):
	casa="Casa: Tully"
else:
	print("Brasao invalido")

print(casa)

-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:53:42) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()

if(brasao=="lobo"):
	casa="Casa: Stark"
elif(brasao=="leao"):
	casa="Casa: Lannister"
elif(brasao=="veado"):
	casa="Casa: Baratheon"
elif(brasao=="dragao"):
	casa="Casa: Targaryen"
elif(brasao=="rosa"):
	casa="Casa: Tyrell"
elif(brasao=="sol"):
	casa="Casa: Martell"
elif(brasao=="lula"):
	casa="Casa: Greyjoy"
elif(brasao=="Esfolado"):
	casa="Casa: Bolton"
elif(brasao=="turta"):
	casa="Casa: Tully"
else:
	print("Brasao invalido")

print("Entrada: ", brasao)
print(casa)

-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:55:24) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("Entrada: ", brasao)

if(brasao=="lobo"):
	casa="Casa: Stark"
elif(brasao=="leao"):
	casa="Casa: Lannister"
elif(brasao=="veado"):
	casa="Casa: Baratheon"
elif(brasao=="dragao"):
	casa="Casa: Targaryen"
elif(brasao=="rosa"):
	casa="Casa: Tyrell"
elif(brasao=="sol"):
	casa="Casa: Martell"
elif(brasao=="lula"):
	casa="Casa: Greyjoy"
elif(brasao=="Esfolado"):
	casa="Casa: Bolton"
elif(brasao=="turta"):
	casa="Casa: Tully"

print(casa)

-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:55:53) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("Entrada: ", brasao)

if(brasao=="lobo"):
	casa="Casa: Stark"
elif(brasao=="leao"):
	casa="Casa: Lannister"
elif(brasao=="veado"):
	casa="Casa: Baratheon"
elif(brasao=="dragao"):
	casa="Casa: Targaryen"
elif(brasao=="rosa"):
	casa="Casa: Tyrell"
elif(brasao=="sol"):
	casa="Casa: Martell"
elif(brasao=="lula"):
	casa="Casa: Greyjoy"
elif(brasao=="Esfolado"):
	casa="Casa: Bolton"
elif(brasao=="turta"):
	casa="Casa: Tully"

print(Entrada, casa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 25, in <module>
    print(Entrada, casa)
NameError: name 'Entrada' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:57:53) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("Entrada: ", brasao)

if(brasao=="lobo"):
	casa="Casa: Stark"
elif(brasao=="leao"):
	casa="Casa: Lannister"
elif(brasao=="veado"):
	casa="Casa: Baratheon"
elif(brasao=="dragao"):
	casa="Casa: Targaryen"
elif(brasao=="rosa"):
	casa="Casa: Tyrell"
elif(brasao=="sol"):
	casa="Casa: Martell"
elif(brasao=="lula"):
	casa="Casa: Greyjoy"
elif(brasao=="Esfolado"):
	casa="Casa: Bolton"
elif(brasao=="turta"):
	casa="Casa: Tully"
else:
	print("Entrada", brasao)
	print("Brasao invalido")

print(casa)

-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 13:01:55) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("Entrada: ", brasao)

if(brasao=="lobo"):
	print(casa="Casa: Stark")
elif(brasao=="leao"):
	print(casa="Casa: Lannister")
elif(brasao=="veado"):
	print(casa="Casa: Baratheon")
elif(brasao=="dragao"):
	print(casa="Casa: Targaryen")
elif(brasao=="rosa"):
	print(casa="Casa: Tyrell")
elif(brasao=="sol"):
	print(casa="Casa: Martell")
elif(brasao=="lula"):
	print(casa="Casa: Greyjoy")
elif(brasao=="Esfolado"):
	print(casa="Casa: Bolton")
elif(brasao=="turta"):
	print(casa="Casa: Tully")
else:
	print("Entrada", brasao)
	print("Brasao invalido")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(casa="Casa: Greyjoy")
TypeError: 'casa' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 13:02:10) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("Entrada: ", brasao)

if(brasao=="lobo"):
	print(casa="Casa: Stark")
elif(brasao=="leao"):
	print(casa="Casa: Lannister")
elif(brasao=="veado"):
	print(casa="Casa: Baratheon")
elif(brasao=="dragao"):
	print(casa="Casa: Targaryen")
elif(brasao=="rosa"):
	print(casa="Casa: Tyrell")
elif(brasao=="sol"):
	print(casa="Casa: Martell")
elif(brasao=="lula"):
	print(casa="Casa: Greyjoy")
elif(brasao=="Esfolado"):
	print(casa="Casa: Bolton")
elif(brasao=="turta"):
	print(casa="Casa: Tully")
else:
	print("Entrada", brasao)
	print("Brasao invalido")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(casa="Casa: Greyjoy")
TypeError: 'casa' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 13:02:23) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("Entrada: ", brasao)

if(brasao=="lobo"):
	print(casa="Casa: Stark")
elif(brasao=="leao"):
	print(casa="Casa: Lannister")
elif(brasao=="veado"):
	print(casa="Casa: Baratheon")
elif(brasao=="dragao"):
	print(casa="Casa: Targaryen")
elif(brasao=="rosa"):
	print(casa="Casa: Tyrell")
elif(brasao=="sol"):
	print(casa="Casa: Martell")
elif(brasao=="lula"):
	print(casa="Casa: Greyjoy")
elif(brasao=="Esfolado"):
	print(casa="Casa: Bolton")
elif(brasao=="turta"):
	print(casa="Casa: Tully")
else:
	print("Entrada", brasao)
	print("Brasao invalido")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(casa="Casa: Greyjoy")
TypeError: 'casa' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 13:02:24) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("Entrada: ", brasao)

if(brasao=="lobo"):
	print(casa="Casa: Stark")
elif(brasao=="leao"):
	print(casa="Casa: Lannister")
elif(brasao=="veado"):
	print(casa="Casa: Baratheon")
elif(brasao=="dragao"):
	print(casa="Casa: Targaryen")
elif(brasao=="rosa"):
	print(casa="Casa: Tyrell")
elif(brasao=="sol"):
	print(casa="Casa: Martell")
elif(brasao=="lula"):
	print(casa="Casa: Greyjoy")
elif(brasao=="Esfolado"):
	print(casa="Casa: Bolton")
elif(brasao=="turta"):
	print(casa="Casa: Tully")
else:
	print("Entrada", brasao)
	print("Brasao invalido")

-- EXECUTION TIME:
0.182702
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1105/main.py", line 19, in <module>
    print(casa="Casa: Greyjoy")
TypeError: 'casa' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 13:03:14) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("Entrada: ", brasao)

if(brasao=="lobo"):
	print(casa="Casa: Stark")
elif(brasao=="leao"):
	print(casa="Casa: Lannister")
elif(brasao=="veado"):
	print(casa="Casa: Baratheon")
elif(brasao=="dragao"):
	print(casa="Casa: Targaryen")
elif(brasao=="rosa"):
	print(casa="Casa: Tyrell")
elif(brasao=="sol"):
	print(casa="Casa: Martell")
elif(brasao=="lula"):
	print(casa="Casa: Greyjoy")
elif(brasao=="Esfolado"):
	print(casa="Casa: Bolton")
elif(brasao=="turta"):
	print(casa="Casa: Tully")
else:
	print("Entrada", brasao)
	print("Brasao invalido")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(casa="Casa: Greyjoy")
TypeError: 'casa' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 13:08:16) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("Entrada: ", brasao)

if(brasao=="lobo"):
	print(casa="Casa: Stark")
elif(brasao=="leao"):
	print(casa="Casa: Lannister")
elif(brasao=="veado"):
	print(casa="Casa: Baratheon")
elif(brasao=="dragao"):
	print(casa="Casa: Targaryen")
elif(brasao=="rosa"):
	print(casa="Casa: Tyrell")
elif(brasao=="sol"):
	print(casa="Casa: Martell")
elif(brasao=="lula"):
	print(casa="Casa: Greyjoy")
elif(brasao=="Esfolado"):
	print(casa="Casa: Bolton")
elif(brasao=="turta"):
	print(casa="Casa: Tully")
else:
	print("Entrada", brasao)
	print("Brasao invalido")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(casa="Casa: Greyjoy")
TypeError: 'casa' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 13:08:51) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("Entrada: ", brasao)

if(brasao=="lobo"):
	print(casa="Casa: Stark")
elif(brasao=="leao"):
	print(casa="Casa: Lannister")
elif(brasao=="veado"):
	print(casa="Casa: Baratheon")
elif(brasao=="dragao"):
	print(casa="Casa: Targaryen")
elif(brasao=="rosa"):
	print(casa="Casa: Tyrell")
elif(brasao=="sol"):
	print(casa="Casa: Martell")
elif(brasao=="lula"):
	print(casa="Casa: Greyjoy")
elif(brasao=="Esfolado"):
	print(casa="Casa: Bolton")
elif(brasao=="turta"):
	print(casa="Casa: Tully")
else:
	print("Entrada", brasao)
	print("Brasao invalido")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(casa="Casa: Greyjoy")
TypeError: 'casa' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 13:08:57) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("Entrada: ", brasao)

if(brasao=="lobo"):
	print(casa="Casa: Stark")
elif(brasao=="leao"):
	print(casa="Casa: Lannister")
elif(brasao=="veado"):
	print(casa="Casa: Baratheon")
elif(brasao=="dragao"):
	print(casa="Casa: Targaryen")
elif(brasao=="rosa"):
	print(casa="Casa: Tyrell")
elif(brasao=="sol"):
	print(casa="Casa: Martell")
elif(brasao=="lula"):
	print(casa="Casa: Greyjoy")
elif(brasao=="Esfolado"):
	print(casa="Casa: Bolton")
elif(brasao=="turta"):
	print(casa="Casa: Tully")
else:
	print("Entrada", brasao)
	print("Brasao invalido")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(casa="Casa: Greyjoy")
TypeError: 'casa' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 13:09:33) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("Entrada: ", brasao)

if(brasao=="lobo"):
	print("Casa: Stark")
elif(brasao=="leao"):
	print("Casa: Lannister")
elif(brasao=="veado"):
	print("Casa: Baratheon")
elif(brasao=="dragao"):
	print("Casa: Targaryen")
elif(brasao=="rosa"):
	print("Casa: Tyrell")
elif(brasao=="sol"):
	print("Casa: Martell")
elif(brasao=="lula"):
	print("Casa: Greyjoy")
elif(brasao=="Esfolado"):
	print("Casa: Bolton")
elif(brasao=="turta"):
	print("Casa: Tully")
else:
	print("Entrada", brasao)
	print("Brasao invalido")

-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 13:09:37) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("Entrada: ", brasao)

if(brasao=="lobo"):
	print("Casa: Stark")
elif(brasao=="leao"):
	print("Casa: Lannister")
elif(brasao=="veado"):
	print("Casa: Baratheon")
elif(brasao=="dragao"):
	print("Casa: Targaryen")
elif(brasao=="rosa"):
	print("Casa: Tyrell")
elif(brasao=="sol"):
	print("Casa: Martell")
elif(brasao=="lula"):
	print("Casa: Greyjoy")
elif(brasao=="Esfolado"):
	print("Casa: Bolton")
elif(brasao=="turta"):
	print("Casa: Tully")
else:
	print("Entrada", brasao)
	print("Brasao invalido")

-- EXECUTION TIME:
0.195259
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Entrada tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 13:10:27) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("Entrada: ", brasao)

if(brasao=="lobo"):
	print("Casa: Stark")
elif(brasao=="leao"):
	print("Casa: Lannister")
elif(brasao=="veado"):
	print("Casa: Baratheon")
elif(brasao=="dragao"):
	print("Casa: Targaryen")
elif(brasao=="rosa"):
	print("Casa: Tyrell")
elif(brasao=="sol"):
	print("Casa: Martell")
elif(brasao=="lula"):
	print("Casa: Greyjoy")
elif(brasao=="Esfolado"):
	print("Casa: Bolton")
elif(brasao=="turta"):
	print("Casa: Tully")
else:
	print("Entrada", brasao)
	print("Brasao invalido")

-- EXECUTION TIME:
0.129662
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Entrada tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 13:10:29) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("Entrada: ", brasao)

if(brasao=="lobo"):
	print("Casa: Stark")
elif(brasao=="leao"):
	print("Casa: Lannister")
elif(brasao=="veado"):
	print("Casa: Baratheon")
elif(brasao=="dragao"):
	print("Casa: Targaryen")
elif(brasao=="rosa"):
	print("Casa: Tyrell")
elif(brasao=="sol"):
	print("Casa: Martell")
elif(brasao=="lula"):
	print("Casa: Greyjoy")
elif(brasao=="Esfolado"):
	print("Casa: Bolton")
elif(brasao=="turta"):
	print("Casa: Tully")
else:
	print("Entrada", brasao)
	print("Brasao invalido")

-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 13:11:49) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("Entrada: ",brasao)

if(brasao=="lobo"):
	print("Casa: Stark")
elif(brasao=="leao"):
	print("Casa: Lannister")
elif(brasao=="veado"):
	print("Casa: Baratheon")
elif(brasao=="dragao"):
	print("Casa: Targaryen")
elif(brasao=="rosa"):
	print("Casa: Tyrell")
elif(brasao=="sol"):
	print("Casa: Martell")
elif(brasao=="lula"):
	print("Casa: Greyjoy")
elif(brasao=="Esfolado"):
	print("Casa: Bolton")
elif(brasao=="turta"):
	print("Casa: Tully")
else:
	print("Entrada", brasao)
	print("Brasao invalido")

-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 13:12:02) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao")
print("Entrada: ",brasao)

if(brasao=="lobo"):
	print("Casa: Stark")
elif(brasao=="leao"):
	print("Casa: Lannister")
elif(brasao=="veado"):
	print("Casa: Baratheon")
elif(brasao=="dragao"):
	print("Casa: Targaryen")
elif(brasao=="rosa"):
	print("Casa: Tyrell")
elif(brasao=="sol"):
	print("Casa: Martell")
elif(brasao=="lula"):
	print("Casa: Greyjoy")
elif(brasao=="Esfolado"):
	print("Casa: Bolton")
elif(brasao=="turta"):
	print("Casa: Tully")
else:
	print("Entrada", brasao)
	print("Brasao invalido")

-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 13:12:09) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao")
print("Entrada: ",brasao)

if(brasao=="lobo"):
	print("Casa: Stark")
elif(brasao=="leao"):
	print("Casa: Lannister")
elif(brasao=="veado"):
	print("Casa: Baratheon")
elif(brasao=="dragao"):
	print("Casa: Targaryen")
elif(brasao=="rosa"):
	print("Casa: Tyrell")
elif(brasao=="sol"):
	print("Casa: Martell")
elif(brasao=="lula"):
	print("Casa: Greyjoy")
elif(brasao=="Esfolado"):
	print("Casa: Bolton")
elif(brasao=="turta"):
	print("Casa: Tully")
else:
	print("Entrada", brasao)
	print("Brasao invalido")

-- EXECUTION TIME:
0.157523
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Entrada tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 13:13:23) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("Entrada: ",brasao)

if(brasao=="lobo"):
	print("Casa: Stark")
elif(brasao=="leao"):
	print("Casa: Lannister")
elif(brasao=="veado"):
	print("Casa: Baratheon")
elif(brasao=="dragao"):
	print("Casa: Targaryen")
elif(brasao=="rosa"):
	print("Casa: Tyrell")
elif(brasao=="sol"):
	print("Casa: Martell")
elif(brasao=="lula"):
	print("Casa: Greyjoy")
elif(brasao=="Esfolado"):
	print("Casa: Bolton")
elif(brasao=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 13:13:30) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("Entrada: ",brasao)

if(brasao=="lobo"):
	print("Casa: Stark")
elif(brasao=="leao"):
	print("Casa: Lannister")
elif(brasao=="veado"):
	print("Casa: Baratheon")
elif(brasao=="dragao"):
	print("Casa: Targaryen")
elif(brasao=="rosa"):
	print("Casa: Tyrell")
elif(brasao=="sol"):
	print("Casa: Martell")
elif(brasao=="lula"):
	print("Casa: Greyjoy")
elif(brasao=="Esfolado"):
	print("Casa: Bolton")
elif(brasao=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 13:13:33) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("brasao").lower()
print("Entrada: ",brasao)

if(brasao=="lobo"):
	print("Casa: Stark")
elif(brasao=="leao"):
	print("Casa: Lannister")
elif(brasao=="veado"):
	print("Casa: Baratheon")
elif(brasao=="dragao"):
	print("Casa: Targaryen")
elif(brasao=="rosa"):
	print("Casa: Tyrell")
elif(brasao=="sol"):
	print("Casa: Martell")
elif(brasao=="lula"):
	print("Casa: Greyjoy")
elif(brasao=="Esfolado"):
	print("Casa: Bolton")
elif(brasao=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.140499
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
